Ajustes en la app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PruebaDeIngreso">
         <activity
+            android:name="com.pruebadeingreso.activities.PostsActivity"
+            android:exported="false" />
+        <activity
             android:name="com.pruebadeingreso.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
